--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-.outter{
+.bottom{
   max-width: 1440px;
   margin: 0 auto;
   font-family: 'Roboto';
   padding: 0px;
-  
+  padding-top: 30px;
 }
 
 .center{
@@ -13,7 +13,6 @@
   padding: 20px;
   overflow: auto;
   margin: 0 auto;
-  font-family: 'Roboto';
 }
 
 .centerTwo{
@@ -23,7 +22,8 @@
   padding: 20px;
   overflow: auto;
   margin: 0 auto;
-  font-family: 'Roboto';
+  font-family: 'Raleway';
+  padding-bottom: 5%;
 }
 
 .left {
@@ -32,15 +32,16 @@
   margin: 0 auto;
   width: 85%;
   overflow: auto;
-  font-family: 'Roboto';
+  font-family: 'Raleway';
+  color: #EFECF2;
 }
 
 body {
-  background-color: #eee;
-  font-family: 'Roboto';
+  font-family: 'Raleway';
   line-height: 1.2;
   padding: 0px;
   margin: 0px;
+  background-color: #EFECF2;
 }
 
 img {
@@ -48,30 +49,34 @@ img {
   width: auto;
 }
 
+p{ 
+	font-family: 'Open Sans';
+}
+
+#repoButton {
+	background-color: #8FA8DF;
+}
+
+#paperButton {
+	background-color: #7B5591;
+}
+
 .left button, botton:focus {
   border: none;
   outline: 0;
-  color: white;
+  color: #EFECF2;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 17px;
+  font-size: 18px;
   margin: 4px 2px;
   cursor: pointer;
   font-family: 'Roboto';
 }
 
-.left button:hover {
-  background-color: #4CAF50;
-  color: white;
-  font-family: 'Roboto';
-  outline: 0;
-}
-
 .left button:active {
-  background-color: #4CAF50;
-  color: white;
+  color: #EFECF2;
   font-family: 'Roboto';
   border: none;
   outline: 0;
@@ -99,8 +104,8 @@ img {
 /* Style the buttons inside the tab */
 .tab button {
   display: block;
-  background-color: #ffff66;
-  color: black;
+  background-color: inherit;
+  color: #4A7CE5;
   padding: 22px 16px;
   width: 100%;
   border: none;
@@ -108,21 +113,16 @@ img {
   text-align: left;
   cursor: pointer;
   transition: 0.3s;
-  font-size: 17px;
+  font-size: 18px;
   margin-top: 10px;
   margin-bottom: 10px;
   font-family: 'Roboto';
 }
 
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-  font-family: 'Roboto';
-}
-
 /* Create an active/current "tab button" class */
 .tab button.active {
-  background-color: #ccc;
+  background-color: #4A7CE5;
+  color: #EFECF2;
   font-family: 'Roboto';
 }
 
